@@ -1,5 +1,7 @@
 2012-01-03  Takashi Kato  <ktakashi@ymail.com>
 
+	* sitelib/shorten.scm (shorten): Added (shorten)library.
+
 	* src/hashtable.c (equal-hash): Fixed non stop problem when given object
 	contains too many shared objects.
 
